fix: Correct spacing issue in footer caused by previous fix

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -24,6 +24,11 @@ body{
     padding-left: 0;
 }
 
+.col-12{
+    padding-left: 5px;
+    padding-right: 5px;
+}
+
 /* ******************************************************** Header Section */
 /* *********************************************************************** */
 
